--- a/documents/avantprojet.tex
+++ b/documents/avantprojet.tex
@@ -77,8 +77,5 @@ Une fois la partie configurée et ouverte, on aboutit dans cette salle d'attente
 La partie à proprement parler. Donc le conteneur du dessin du terrain qui gère les éléments extérieurs, les événements et toute autre interaction avec le reste du code. Inclut une zone de dessin.
 \subsection{GameZone.java}
 \paragraph{}
-
-\subsection{MenuPanel.java}
-\paragraph{}
-Gère le menu principal affiché à l'ouverture du jeu. Contient les boutons qui mèneront vers les principales actions citées plus haut (nouvelle partie, rejoindre, options, quitter).
+Zone de dessin chargée de représenter le terrain, les joueurs, etc.
 \end{document}          
